# span

./: Cargo.toml  EXAMPLE.txt  LICENSE  README.md  SPEC.md
.claude/: settings.json
src/: main.rs
tests/: cli.rs  guard.rs
