[package]
name = "span"
version = "0.1.0"
edition = "2024"

[dependencies]
bstr = "1.12.1"
clap = { version = "4.6.1", features = ["derive"] }
tempfile = "3.27.0"
# span-guard hook only: parse the PreToolUse stdin payload and emit the hook
# decision. This is an external protocol boundary, so it uses typed serde shapes.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
